--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -6,5 +6,5 @@
   <p>
     {{ product.description }}
     </p>
-    <button (click)="addToProduct(product)">Buy</button>
+    <button (click)="addToCart(product)">Buy</button>
   </div>
